force-app/main/default/objects/Monthly_Target__c/Monthly_Target__c.object-meta.xml
<CustomObject>
    <label>Monthly Target</label>
    <nameField>
        <label>Target Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monthly Targets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>