force-app/main/default/objects/Monthly_Target__c/fields/EYI_Demand_Raised_16th_to_30th__c.field-meta.xml
<CustomField>
    <fullName>EYI_Demand_Raised_16th_to_30th__c</fullName>
    <label>Demand Raised 16th to 30th</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>