force-app/main/default/objects/Monthly_Target__c/fields/EYI_Demand_Raised_16th_to_30th_Share__c.field-meta.xml
<CustomField>
    <fullName>EYI_Demand_Raised_16th_to_30th_Share__c</fullName>
    <formula>EYI_Demand_Raised_16th_to_30th__c *  EYI_Demand_Raised_16th_to_30th_percent__c</formula>
    <label>Demand Raised 16th to 30th Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>