force-app/main/default/objects/Monthly_Target__c/fields/EYI_Demand_Raised_1st_to_15th__c.field-meta.xml
<CustomField>
    <fullName>EYI_Demand_Raised_1st_to_15th__c</fullName>
    <description>Value will be fetched from SAP</description>
    <label>Total Demand to be Raised - 1st to 15th</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>