force-app/main/default/objects/Monthly_Target__c/fields/EYI_Demand_Raised_1st_to_15th_percent__c.field-meta.xml
<CustomField>
    <fullName>EYI_Demand_Raised_1st_to_15th_percent__c</fullName>
    <label>Demand to be Raised from 1st to 15th %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>