force-app/main/default/objects/Monthly_Target__c/fields/EYI_Demand_Raised_1st_to_15th_Share__c.field-meta.xml
<CustomField>
    <fullName>EYI_Demand_Raised_1st_to_15th_Share__c</fullName>
    <formula>EYI_Demand_Raised_1st_to_15th__c *  EYI_Demand_Raised_1st_to_15th_percent__c</formula>
    <label>Target (To be Raised Demand)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>