force-app/main/default/objects/Monthly_Target__c/fields/EYI_Month__c.field-meta.xml
<CustomField>
    <fullName>EYI_Month__c</fullName>
    <label>Month</label>
    <type>Date</type>
</CustomField>