force-app/main/default/objects/Monthly_Target__c/fields/EYI_Overall_Outstanding_Amount1__c.field-meta.xml
<CustomField>
    <fullName>EYI_Overall_Outstanding_Amount1__c</fullName>
    <label>Total Collectable Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>