force-app/main/default/objects/Monthly_Target__c/fields/EYI_Overall_Outstanding_Amount__c.field-meta.xml
<CustomField>
    <fullName>EYI_Overall_Outstanding_Amount__c</fullName>
    <label>Overall Outstanding Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>