force-app/main/default/objects/Monthly_Target__c/fields/EYI_Overall_Outstanding_Amount_Percent__c.field-meta.xml
<CustomField>
    <fullName>EYI_Overall_Outstanding_Amount_Percent__c</fullName>
    <label>Overall Outstanding Amount %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>