force-app/main/default/objects/Monthly_Target__c/fields/EYI_Received_Amount__c.field-meta.xml
<CustomField>
    <fullName>EYI_Received_Amount__c</fullName>
    <label>Received Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>