force-app/main/default/objects/Monthly_Target__c/fields/EYI_Sales_CRM_Head__c.field-meta.xml
<CustomField>
    <fullName>EYI_Sales_CRM_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales &amp; CRM Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Monthly_Targets1</relationshipName>
    <type>Lookup</type>
</CustomField>