force-app/main/default/objects/Monthly_Target__c/fields/EYI_Target_Percentage__c.field-meta.xml
<CustomField>
    <fullName>EYI_Target_Percentage__c</fullName>
    <label>Target Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>