force-app/main/default/objects/Monthly_Target__c/fields/EYI_Total_Target_Amount__c.field-meta.xml
<CustomField>
    <fullName>EYI_Total_Target_Amount__c</fullName>
    <formula>Overall_EYI_Outstanding_Amount_Share__c + EYI_Demand_Raised_1st_to_15th_Share__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Target Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>