force-app/main/default/objects/Monthly_Target__c/fields/EYI_Tower__c.field-meta.xml
<CustomField>
    <fullName>EYI_Tower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tower</label>
    <referenceTo>EYI_Tower__c</referenceTo>
    <relationshipLabel>Monthly Targets</relationshipLabel>
    <relationshipName>Monthly_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>