force-app/main/default/objects/Monthly_Target__c/fields/Overall_EYI_Outstanding_Amount_Share__c.field-meta.xml
<CustomField>
    <fullName>Overall_EYI_Outstanding_Amount_Share__c</fullName>
    <formula>EYI_Overall_Outstanding_Amount1__c   *  EYI_Overall_Outstanding_Amount_Percent__c</formula>
    <label>Collectable Target Amount (O/S)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>