force-app/main/default/objects/Monthly_Target__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EYI_Project__c</columns>
    <columns>EYI_Tower__c</columns>
    <columns>EYI_RM__c</columns>
    <columns>EYI_Status__c</columns>
    <columns>EYI_Overall_Outstanding_Amount1__c</columns>
    <columns>EYI_Target_Percentage__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>