force-app/main/default/objects/Monthly_Target__c/listViews/Current_Month_Targets.listView-meta.xml
<ListView>
    <fullName>Current_Month_Targets</fullName>
    <columns>NAME</columns>
    <columns>EYI_Project__c</columns>
    <columns>EYI_Tower__c</columns>
    <columns>EYI_RM__c</columns>
    <columns>EYI_Status__c</columns>
    <columns>EYI_Target_Amount__c</columns>
    <columns>EYI_Target_Percentage__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Current Month Targets</label>
    <sharedTo>
        <role>CRM_Head</role>
    </sharedTo>
</ListView>